language/move-compiler/tests/move_check/parser/spec_parsing_inside_fun.exp
error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:17
   │
32 │         spec {} + 1;
   │                 ^
   │                 │
   │                 Unexpected '+'
   │                 Expected an expression term

